# blog

./: README.md  pyproject.toml
hackernews-bot/: Readme.md
hackernews-bot/hn_bot/: app.py  hn_scraper.py  llm_classifier.py
hn_bot/: novu_bot.py
